@@ -2405,6 +2405,14 @@ aaa
 /p/dfn/em/dfn;element not allowed
 
 #data
+<table xmlns="http://www.w3.org/1999/xhtml">
+<thead><tr><td/></tr></thead>
+<tbody><tr><td/></tr></tbody>
+<tfoot><tr><td/></tr></tfoot>
+</table>
+#errors
+
+#data
 <fieldset xmlns="http://www.w3.org/1999/xhtml">
 <legend>XXX</legend>
 </fieldset>
