@@ -1,7 +1,7 @@
 1..94
 # Running under perl version 5.008007 for linux
-# Current time local: Sat May 26 21:29:24 2007
-# Current time GMT:   Sat May 26 12:29:24 2007
+# Current time local: Sun May 27 19:26:53 2007
+# Current time GMT:   Sun May 27 10:26:53 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
