@@ -1,3 +1,10 @@
+2007-05-27  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-2.dat: Some error messages are updated.
+
+	* content-model-1.dat: Very simple test for |tbody|, |thead|,
+	and |tfoot| is added.
+
 2007-05-26  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: Tests for |rel| values are added.
