@@ -1,5 +1,10 @@
 2007-05-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm (thead, tfoot): Checker specifications
+	were incorrect.
+
+2007-05-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm ($HTMLURIAttrChecker): Include
 	error position in the |type| option of the error.
 
